# neptune

./: .gitignore  LICENSE  Makefile  NOTES.txt  README.md
benchmarks/handwritten/: ShortLived.jl
doc/: NOTES.txt  julia-gc-design.org  outline-of-pres-and-report.md  roadmap.org  rust-gc-design.org
doc/report/: Makefile  conclusion.tex  evaluation.tex  intro.tex  julia.tex  neptune.tex  report.bib  report.tex  settings.tex  summary.tex
julia/: Make.inc  Makefile  setup-cscope.sh
julia/src/: Makefile  gc-debug.c  gc-pages.c  gc.c  gc.h  init.c  julia_internal.h  julia_threads.h  neptune.c  neptune.h  neptune_predef.h  neptune_threads.h  options.h  threading.c
julia/ui/: Makefile
neptune/: Cargo.toml
neptune/src/: c_interface.rs  gc.rs  gc2.rs  lib.rs  pages.rs  util.rs
neptune/src/concurrency/: mod.rs  stack.rs
results/: Plots.ipynb  benchmark-results.csv
tests/: tests_i_ran.txt
tests/gc_bench/: GCBench.jl
tests/simple/: eigen.jl  fact.jl  sum.jl
