[package]
name = "neptune"
version = "0.1.0"
authors = ["Mehmet Emre <maemre2@gmail.com>", "Michael Christensen <chmdko@gmail.com>"]

[dependencies]
libc = "0.2.21"
bit_field = "0.7.0"
threadpool = "1.0"

[lib]
name = "neptune"
crate-type = ["staticlib"] # produce a static library that works with C

[features]
default = ["debug"]
debug = ["memfence"]
memfence = [] # to verify pools
gc_time = [] # TODO check?
run_only_once = []

